@@ -321,6 +321,11 @@ See L</"ERROR HANDLING">.
 Enables/disables some of the extensions described
 L<above|/REALLY RELAXED EXTENSIONS">.
 
+=item key_order
+
+Adds a key C<" key order "> to each hash, containing an array with the
+hash keys in order of appearance. This is used for pretty printing.
+
 =back
 
 =head2 decode
@@ -364,6 +369,8 @@ For a full list, see L<JSON::Relaxed::ErrorCodes>.
 
 =head2 pretty (see "encode")
 
+=head2 key_order
+
 =head2 booleans (see L<"Boolean values">)
 
 Sets/resets options.
@@ -379,8 +386,17 @@ Note that the value must be assigned to, e.g.
 Produces a string with a really relaxed rendition of the data.
 With option C<pretty>, the rendition is pretty-printed.
 
+With option C<key_order> the order of hash keys will be taken from a
+pseudo-key C<" key order ">. This pseudo-key is added when option
+C<key_order> is passed to C<decode>.
+
 A Perl structure is passed as C<data> option. This structure is encoded.
 Note however that this structure may contain only strings, arrays and hashes.
+
+Option C<schema> can be used to provide schema data for structure to
+be encoded. For each item to be encoded, the schema is consulted and
+the following schema items are prepended as comments: C<title>,
+C<description>, and C<infoText>.
 
 =cut
 
